DietPi-Software | PiHole: Web interface password is now set during install (default dietpi): https://github.com/Fourdee/DietPi/issues/662

Bug fixes:
DietPi-Software | Resolved an issue where the DietPi installed version of Chromium was being overwritten by Debian repo during dist-upgrade: https://github.com/Fourdee/DietPi/issues/658

RPi Stretch:

-----------------------------------------------------------------------------------------------------------

v140
(21/12/16)

Changes / Improvements / Optimizations:
DietPi-Software | Mosquitto: Now available for install. Message broker that implements MQTT: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=4293#p4293
DietPi-Software | NAA Daemon: Now available for install. Signalyst Network Audio Adaptor (NAA): http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=4294#p4294
DietPi-Software | Node-Red: Now available for install. Visual tool for wiring together hardware devices, APIs and online services in new and interesting ways: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=4292#p4292
DietPi-Software | Tomcat8: Now available for install. Tomcat is a Servlet and JSP Server serving Java technologies: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=4316#p4316
DietPi-Software | Nextcloud: Updated to latest version v11 (NB: applies to new installations only): https://github.com/Fourdee/DietPi/issues/647
DietPi-Software | Syncthing: Updated to latest version v0.14.15 (NB: applies to new installations only).
DietPi-Software | Syncthing: Syncthing-Inotify is now installed by default with Syncthing: https://github.com/Fourdee/DietPi/issues/652
DietPi-Software | WiringPi: Is now also available for Odroid boards: https://github.com/Fourdee/DietPi/issues/650
DietPi-JustBoom | Added support for changing DSP Filters on sound cards that support it. eg: JustBoom, Allo Piano, Odroid HiFi Shield
DietPi-JustBoom | Added support for viewing current ALSA output stream info. Useful for checking current output freq, bitdepth etc.