@@ -2400,6 +2400,8 @@ _EOF_
 			# force_options='--allow'
 		# fi
 
+		#-qq can add a slight period of appearing nothing is happening, lets inform user
+		/DietPi/dietpi/func/dietpi-notify 2 "Apt-get is processing, please wait...\n"
 		DEBIAN_FRONTEND=noninteractive apt-get install -y -qq $force_options $string
 
 		local result=$?
