@@ -1975,6 +1975,9 @@ _EOF_
 
 		fi
 		#-------------------------------------------------------------------------------
+		#Apt-transport install by default on all systems:
+		apt-get install -y apt-transport-https
+		#-------------------------------------------------------------------------------
 
 	fi
 
