@@ -7,6 +7,7 @@ DietPi-Software | PiHole: Web interface password is now set during install (defa
 
 Bug fixes:
 DietPi-Software | Resolved an issue where the DietPi installed version of Chromium was being overwritten by Debian repo during dist-upgrade: https://github.com/Fourdee/DietPi/issues/658
+General | apt-transport-https: Is now installed by default on all devices. Required for https apt usage.
 
 RPi Stretch:
 
